[package]
description = "A simple derive macro that adds a default getter function for each struct field"
edition = "2021"
license = "MIT"
name = "default_fields"
readme = "README.md"
repository = "https://github.com/qusuyan/DefaultFields.git"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "2"
